Fix bug causing overflow of boxes

--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,4 @@
     flex-direction: row;
     flex-wrap: wrap;
     background-color: powderblue;
-    border: 2px solid black;
 }
